fixed alignment issue and rounded button

--- a/css/index.css
+++ b/css/index.css
@@ -167,13 +167,13 @@ h2 {
 }
 
 header nav {
-    width: 60%;
+    width: 1000%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 22px 2%;
     font-size: 14px;
-    margin-left: 5%;
+    margin-left: 2%;
     font-weight: bold;
 }
 
@@ -263,10 +263,10 @@ justify-content: space-between;
 .btn {
     border: 2px solid black;
     width: 30%;
-    border-radius: 6%;
-    height: 1.5em;
+    border-radius: 8%;
+    height: 2.5em;
     text-align: center;
-    padding-top: .5%
+    padding-top: 2.5%
     
 }
 
